--- a/pom.xml
+++ b/pom.xml
@@ -1,10 +1,10 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>com.cassandra.core</groupId>
-	<artifactId>SpringCassandra</artifactId>
+	<groupId>com.shvid.cassandra.example</groupId>
+	<artifactId>sdc-example</artifactId>
 	<version>1.0</version>
-	<name>SpringCassandra</name>
+	<name>Spring Data Cassandra Example</name>
 	<repositories>
 		<repository>
 			<id>sonatype-nexus-snapshots</id>
